--- a/404.md
+++ b/404.md
@@ -1,11 +1,11 @@
 ---
 layout: page
 title: "Page Not Found"
-description: "Page not found. Your pixels are in another canvas."
+description: "Page not found, sorry."
 image:
-  feature: texture-feature-01.jpg
-  credit: Texture Lovers
-  creditlink: http://texturelovers.com
+  feature: esalq-sun-afternoon.jpg
+  credit: augusto-garcia
+  creditlink: http://augusto-garcia.github.io
 ---  
 
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
